modified:   index.html 	deleted:    recuros/documents/CV-MauricioEnriqueVasquezRamirez.docx 	new file:   recuros/documents/CV-MauricioEnriqueVasquezRamirez.pdf

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="itemContacto">
                 <div class="borde"><img id="CV" class="icono" src="recuros/img/iconos/cv.png" alt="correo"></div>
-                <a class="link-redes" href="recuros/documents/CV-MauricioEnriqueVasquezRamirez.docx" rel="noopener noreferrer">Mi curriculum</a>
+                <a class="link-redes" href="recuros/documents/CV-MauricioEnriqueVasquezRamirez.pdf" rel="noopener noreferrer">Mi curriculum</a>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path d="M12 2V16M12 16L8 12M12 16L16 12M4 18H20" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
