modified:   index.html 	new file:   robots.txt

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="contactos">
             <div id="numero" class="itemContacto">
                 <div class="borde"><img id="telefono" class="icono copy" src="recuros/img/iconos/numero.png" alt="telefono"></div>
-                <label class="contac copy" for="">+503 6184 7112</label>
+                <label class="contac copy" for="">6184 - 7112</label>
             </div>
             <div id="correo" class="itemContacto">
                 <div class="borde"><img id="email" class="icono copy" src="recuros/img/iconos/correo.png" alt="correo"></div>
