modified:   index.html 	new file:   recuros/documents/EF-SET-Certificate.pdf

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <label for="" class="cursoTitulo">Cybersecurity Awareness - CAPC</label>
                     </div>
                     <div class="itemGrid">
-                        <a href="https://cert.efset.org/en/WM7ksG" target="_blank" rel="noopener noreferrer"><img src="recuros/img/cursos/EF-SET-English-Certificate.png" alt=""></a>
+                        <a href="recuros/documents/EF-SET-Certificate.pdf" target="_blank" rel="noopener noreferrer"><img src="recuros/img/cursos/EF-SET-English-Certificate.png" alt=""></a>
                         <label for="" class="cursoTitulo">EF SET English Certificate</label>
                     </div>
                 </div>
