--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="recuros/Styles/style.css">
+    <link rel="icon" href="recuros/img/iconos/portafolio.ico" type="image/x-icon">
     <title>Portafolio</title>
 </head>
 <body>
@@ -92,7 +93,7 @@
         <section class="body">
             <div id="yo">
                 <h2>Perfil Profesional</h2>
-                <p>Soy una persona proactiva y analítica, me destaco por mi capacidad para resolver problemas. Busco una oportunidad para aplicar mis habilidades en gestión de proyectos en un entorno dinámico y colaborativo, contribuyendo al desarrollo de soluciones tecnológicas e innovadoras</p>
+                <p>Soy una persona proactiva y analítica, me destaco por mi capacidad para resolver problemas. Busco una oportunidad para aplicar mis habilidades en aseguramiento de la calidad en un entorno dinámico y colaborativo, contribuyendo al desarrollo de soluciones tecnológicas e innovadoras</p>
             </div>
             <div id="educacion">
                 <h2>Educacion</h2>
@@ -116,13 +117,13 @@
                         <ul>
                             <li class="skill-titulo">Lenguajes de programación:</li>
                             <ul> 
-                                <li><img class="skill-img" src="recuros/img/iconos/python.png" alt="">Python: Intermedio.</li>
-                                <li><img class="skill-img" src="recuros/img/iconos/java.png" alt="">Java: Intermedio.</li>
+                                <li><img class="skill-img" src="recuros/img/iconos/python.png" alt="">Python: Basico.</li>
+                                <li><img class="skill-img" src="recuros/img/iconos/java.png" alt="">Java: Basico.</li>
                             </ul>
                             <br>
                             <li class="skill-titulo">Bases de datos:</li>
                                 <ul>
-                                    <li><img class="skill-img" src="recuros/img/iconos/mysql.png" alt="">MySQL: Internedio.</li>
+                                    <li><img class="skill-img" src="recuros/img/iconos/mysql.png" alt="">MySQL: Basico.</li>
                                     <li><img class="skill-img" src="recuros/img/iconos/mariadb.png" alt="">MariaDB: Basico.</li>
                                 </ul>
                                 <br>
@@ -136,8 +137,8 @@
                             <br>
                             <li class="skill-titulo">Metodologías:</li>
                             <ul>
-                                <li><img class="skill-img" src="recuros/img/iconos/scrum.png" alt="">Scrum: basico</li>
-                                <li><img class="skill-img" src="recuros/img/iconos/agil.png" alt="">Agile: basico</li>
+                                <li><img class="skill-img" src="recuros/img/iconos/scrum.png" alt="">Scrum</li>
+                                <li><img class="skill-img" src="recuros/img/iconos/canvas.png" alt="">Canvas</li>
                             </ul>
                             <br>
                             <li class="skill-titulo">Herramientas de desarrollo:</li>
