Agregado de experiencia laboral

--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
             <h1 class="nombre">Mauricio Enrique Vásquez Ramírez </h1>
         </div>
         <div class="contactos">
-            <div id="numero" class="itemContacto">
-                <div class="borde"><img id="telefono" class="icono copy" src="recuros/img/iconos/numero.png" alt="telefono"></div>
-                <label class="contac copy" for="">6184 - 7112</label>
-            </div>
             <div id="correo" class="itemContacto">
                 <div class="borde"><img id="email" class="icono copy" src="recuros/img/iconos/correo.png" alt="correo"></div>
                 <a class="contac copy" href="mauricio.01.ra@gmail.com">mauricio.01.ra@gmail.com</a>
@@ -43,6 +39,7 @@
             <a class="itemMenu" href="#reconocimientos">Reconocimientos</a>
             <a class="itemMenu" href="#cursos">Cursos y Diplomas</a>
             <a class="itemMenu" href="#proyectos">Proyectos</a>
+            <a class="itemMenu" href="#Experiencia">Experiencia</a>
         </div>
     </section>
     <div id="alfa">
@@ -181,6 +178,16 @@
                     <p class="descr">Aplicación Andriod para publicar fotos tipo Instagram donde se puede registrarse, compartir imágenes y comentarlas, echa con java y Google Storage.</p>
                     <p for="" class="descr">Link al repositorio del proyecto:</p>
                     <a href="https://github.com/Maury01/Programacion-II/tree/Proyecto_Final_PicShared" target="_blank" rel="noopener noreferrer"><img class="icono push icono-link" id="git" src="recuros/img/iconos/github.png" alt=""></a>
+                </div>
+            </div>
+            <div id="Experiencia">
+                <h2> Experiencia Laboral</h2>
+                <div>
+                    <label class="year">Roots.INC - 1 año</label>
+                    <label class="titulo">Quality Assurance</label>
+                    <p class="descr">Participé en la etapa de aseguramiento de la calidad de 5 sistemas informáticos. Apliqué pruebas manuales para verificar el correcto funcionamiento de los requerimientos y capacidad de adaptación a diferentes dispositivos, logrando así mejorar la calidad final del producto.</p>
+                    <p for="" class="descr">Pagina de la empresa:</p>
+                    <a href="https://www.solucionesroots.com/" target="_blank" rel="noopener noreferrer"><img class="icono copy icono-link" src="recuros/img/iconos/rootslogo.svg" alt=""></a>
                 </div>
             </div>
             <div id="cursos">
